--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <header> 
    <div class="header-content"> <!-- Add your profile picture here --> 
     <img src="mypic.jpg" alt="Your Profile Picture" class="profile-picture"> 
-    <h1>MUKESH G</h1> 
+    <h1>EZHILRAJA S</h1> 
     <p>computer student </p> 
    </div> 
   </header> 
@@ -142,12 +142,12 @@
   <section id="resume"> 
    <div class="section-content"> 
     <center> 
-     <h2>Resume</h2> <a href="https://drive.google.com/file/d/1HaDL3i-EhXwX4pl5Dnb0Vi2hs7-nbmqc/view?usp=drivesdk" target="_blank" class="download-button">Download CV</a> 
+     <h2>Resume</h2> <a> "https://drive.google.com/file/d/19-X_HKCYxLQ3mIUwP0WfbRCqGZTZZU1R/view?usp=drivesdk" target="_blank" class="download-button">Download CV</a> 
     </center> 
    </div> 
   </section> 
   <footer> 
-   <p>© 2023 MUKESH G</p> 
+   <p>© 2023 EZHILRAJA S</p> 
   </footer> 
   <script>
         // Smooth scrolling to section when clicking on navigation links
