--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
   <section id="resume"> 
    <div class="section-content"> 
     <center> 
-     <h2>Resume</h2>
-     <a href="https://drive.google.com/file/d/19-X_HKCYxLQ3mIUwP0WfbRCqGZTZZU1R/view?usp=drive_link" target="_blank" class="download-button">Download CV</a> 
+     <h2>Resume</h2><a herf="https://drive.google.com/file/d/19-X_HKCYxLQ3mIUwP0WfbRCqGZTZZU1R/view?usp=drivesdk" target="_blank" class="download-button">Download CV</a> 
     </center> 
    </div> 
   </section> 
