--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
   <section id="resume"> 
    <div class="section-content"> 
     <center> 
-     <h2>Resume</h2><a herf="https://drive.google.com/file/d/19-X_HKCYxLQ3mIUwP0WfbRCqGZTZZU1R/view?usp=drivesdk" target="_blank" class="download-button">Download CV</a> 
+     <h2>Resume</h2> <a href="https://drive.google.com/file/d/19-X_HKCYxLQ3mIUwP0WfbRCqGZTZZU1R/view?usp=drivesdk" target="_blank" class="download-button">Download CV</a> 
     </center> 
    </div> 
   </section> 
   <footer> 
-   <p>© 2023 EZHILRAJA S/p> 
+   <p>© 2023 EZHILRAJA S</p> 
   </footer> 
   <script>
         // Smooth scrolling to section when clicking on navigation links
